objects/SM_Log__c.object
<CustomObject>
    <fields>
        <fullName>Email_Grouping__c</fullName>
        <description>Controls the ability to group log records to an activity email.  We needed this in order to deal with the Queueable which will not allow returned data in order to track the logs activity as a whole.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Grouping</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsFrozen__c</fullName>
        <description>Identifies if the user is frozen or not</description>
        <label>IsFrozen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Login_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Login Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Grouping_2__c</fullName>
        <description>Used to match / pair up the callouts and the responses.  Primarily used on to assist grouping on reports.  This formula only works if the naming convention appended is '_AA_N'</description>
        <formula>LEFT(Log_Grouping__c,LEN(Log_Grouping__c)-5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log Grouping 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Grouping_Desc__c</fullName>
        <description>Used to allow the viewing of the Log Grouping field to be viewed in descending order and still group the callout and response in the proper order.  To do that set this field in Ascending order on the page.  This formula only works if the naming convention appended is '_AA_N'</description>
        <formula>IF(RIGHT(Log_Grouping__c,1) = "1", LEFT(Log_Grouping__c,LEN(Log_Grouping__c)-1) + "2",
LEFT(Log_Grouping__c,LEN(Log_Grouping__c)-1) + "1")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to allow the viewing of the Log Grouping field to be viewed in descending order and still group the callout and response in the proper order.  To do that set this field in Ascending order on the page.</inlineHelpText>
        <label>Log Grouping (Desc)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Grouping__c</fullName>
        <description>Holds 'LG_' + System.currentTimeMillis()</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to match / pair up the callouts and the responses in callout then response order.  Primarily used on SM_Logging__c page for grouping.</inlineHelpText>
        <label>Log Grouping</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Source__c</fullName>
        <description>Class or class method name that is producing the message</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field contains the class or class.method that produced the message.</inlineHelpText>
        <label>Message Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message Content</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Permission_Sets__c</fullName>
        <description>List of user permission sets associated to the user's profile</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Permission Sets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <description>Used to hold the User Profile</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Name__c</fullName>
        <description>Sandbox name is the sandbox that some action occurred on.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Sandbox name is the sandbox that some action occurred on.</inlineHelpText>
        <label>Org Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <inlineHelpText>Describes the level of concern regarding the message: Critical = should get immediate attention, Info = an action occurred and was successful or no action required.</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Last_Modified_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contains the last modified date of the record that came from the source org.</inlineHelpText>
        <label>Source Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Used to record the Sandbox Manager activity</description>
    <label>Sandbox Manager Log</label>
    <nameField>
        <displayFormat>SM-{00000}</displayFormat>
        <label>SM_Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sandbox Manager Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email_Grouping__c</columns>
        <columns>Log_Grouping__c</columns>
        <columns>Log_Grouping_Desc__c</columns>
        <columns>Sandbox_Name__c</columns>
        <columns>Message_Source__c</columns>
        <columns>Username__c</columns>
        <columns>Profile_Name__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Severity__c</columns>
        <columns>Message__c</columns>
        <columns>IsFrozen__c</columns>
        <columns>Last_Login_Date__c</columns>
        <columns>Source_Last_Modified_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Email_Grouping__c</columns>
        <columns>Log_Grouping__c</columns>
        <columns>Log_Grouping_Desc__c</columns>
        <columns>Sandbox_Name__c</columns>
        <columns>Message_Source__c</columns>
        <columns>Username__c</columns>
        <columns>Profile_Name__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Severity__c</columns>
        <columns>Message__c</columns>
        <columns>IsFrozen__c</columns>
        <columns>Last_Login_Date__c</columns>
        <columns>Source_Last_Modified_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Last Week</label>
    </listViews>
    <listViews>
        <fullName>This_Week</fullName>
        <columns>NAME</columns>
        <columns>Email_Grouping__c</columns>
        <columns>Log_Grouping__c</columns>
        <columns>Log_Grouping_Desc__c</columns>
        <columns>Sandbox_Name__c</columns>
        <columns>Message_Source__c</columns>
        <columns>Username__c</columns>
        <columns>Profile_Name__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Severity__c</columns>
        <columns>Message__c</columns>
        <columns>IsFrozen__c</columns>
        <columns>Last_Login_Date__c</columns>
        <columns>Source_Last_Modified_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Week</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Email_Grouping__c</columns>
        <columns>Log_Grouping__c</columns>
        <columns>Log_Grouping_Desc__c</columns>
        <columns>Sandbox_Name__c</columns>
        <columns>Message_Source__c</columns>
        <columns>Username__c</columns>
        <columns>Profile_Name__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Severity__c</columns>
        <columns>Message__c</columns>
        <columns>IsFrozen__c</columns>
        <columns>Last_Login_Date__c</columns>
        <columns>Source_Last_Modified_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <listViews>
        <fullName>X1558035579025</fullName>
        <columns>NAME</columns>
        <columns>Email_Grouping__c</columns>
        <columns>Log_Grouping__c</columns>
        <columns>Log_Grouping_Desc__c</columns>
        <columns>Sandbox_Name__c</columns>
        <columns>Message_Source__c</columns>
        <columns>Username__c</columns>
        <columns>Profile_Name__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Severity__c</columns>
        <columns>Message__c</columns>
        <columns>IsFrozen__c</columns>
        <columns>Last_Login_Date__c</columns>
        <columns>Source_Last_Modified_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email_Grouping__c</field>
            <operation>equals</operation>
            <value>1558035579025</value>
        </filters>
        <label>1558035579025</label>
    </listViews>
</CustomObject>